--- a/Rock-Paper-Scissors/rock-paper-scissors.css
+++ b/Rock-Paper-Scissors/rock-paper-scissors.css
@@ -29,7 +29,8 @@ body {
   margin-top: 60px;
 }
 
-.reset-button {
+.reset-button,
+.auto-play {
   background-color: white;
   border: none;
   font-size: 15px;
