Create confirm reset button

--- a/Rock-Paper-Scissors/rock-paper-scissors.css
+++ b/Rock-Paper-Scissors/rock-paper-scissors.css
@@ -30,10 +30,16 @@ body {
 }
 
 .reset-button,
-.auto-play {
+.auto-play,
+.js-button-yes,
+.js-button-no {
   background-color: white;
   border: none;
   font-size: 15px;
   padding: 8px 15px;
   cursor: pointer;
+}
+
+.js-confirm-button {
+  margin-left: 5px;
 }
